# m5atoms3-ina226

./: .gitignore  README.md
atoms3/: mktags.sh  platformio.ini
atoms3/src/: datetime_ctl.cpp  datetime_ctl.h  main.ino  writer.cpp  writer.hpp
converter/: Cargo.toml
converter/src/: cmd_args.rs  main.rs
misc/: plot.gp
