[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = {version = "4.5.4", features = ["derive"]}
regex = "1.10.4"
